
- Saving a graph now asks which properties should also be saved.

- Fixed color/no-color option for exported images.

- Nodes (Colors/Sizes)

- Improved Edges

- Fixed call of corMatWizard if only a matrix is given without names and dimensions.

- Fixed confusing (but mostly not relevant) mix-up between in NA and NaN during R/Java conversions.

- Save p-values / correlations


Changes in version 0.8-8 (03-10-2014)
=====================================

- API FUNCTION PARAMETER CHANGE: The argument 'exhaust' in the functions
  'generateBounds', 'generatePvals' and 'generateTest' was renamed to
  'upscale' to reduce misinterpretation.

- Since CRAN currently will build binaries only for 3.0 and 3.1, we drop support
  for R < 3.0.0 in the official releases to make our lives easier. Nevertheless 
  there is a branch pre-R3 on github for those interested (or simply contact us 
  if you are using an older version of R).

- Up to now the parameter 'test' of function gMCP could be one of the following:
  "Bonferroni", "Simes", "Bretz2011" or "simple-parametric".
  We now introduced a new parameter 'upscale' (default FALSE) and restricted 'test' to:
  "Bonferroni", "Simes" and "parametric", 
  where the old "Bretz2011" corresponds to 'test="parametric", upscale=TRUE' and
  the old "simple-parametric" to 'test="parametric", upscale=FALSE'.
  For compatibility the old function calls actually still work, but are discouraged.

- The parameters 'cr' and 'sigma' in function 'calcPower' were renamed into 'corr.test' 
  and 'corr.sim' respectively to further clarify that both are correlation matrices,
  the first used for the test (this matrix may contain NAs if the full correlation is 
  not known for the test) and the second one for the simulation (which can not contain 
  NAs and may also differ from the first one if power under misspecification is 
  investigated). 
  For compatibility the old function calls actually still work, but are discouraged.
