@@ -37,10 +37,11 @@ import com.jgoodies.forms.layout.FormLayout;
 
 public class ImageExportDialog extends JDialog implements ActionListener {
 
-	JButton ok = new JButton("Ok");
+	JButton ok = new JButton("Save file");
 	JTextField tfFile = new JTextField();
 	JCheckBox cbColored = new JCheckBox();
 	JCheckBox cbTransparent = new JCheckBox();
+	JButton selectFile = new JButton("Choose file:");
 	ImagePanel ip;
 	
 	
@@ -50,6 +51,7 @@ public class ImageExportDialog extends JDialog implements ActionListener {
 	public ImageExportDialog(CreateGraphGUI parent) {
 		super(parent, "Export Image", true);
 		setLocationRelativeTo(parent);
+		this.parent = parent;
 		control = parent.getGraphView();		
 		
         String cols = "5dlu, pref, 5dlu, fill:pref:grow, 5dlu, pref, 5dlu";
@@ -74,12 +76,18 @@ public class ImageExportDialog extends JDialog implements ActionListener {
         
         row += 2;
         
-        cbTransparent = new JCheckBox("Transparent background (recommended: yes)");
+        cbTransparent = new JCheckBox("Transparent background (recommended)");
         cbTransparent.addActionListener(this);
         cbTransparent.setSelected(Configuration.getInstance().getGeneralConfig().exportTransparent());
         getContentPane().add(cbTransparent, cc.xyw(2, row, 3));     
         
+        row += 2;
+        selectFile.addActionListener(this);
+        tfFile.setText(Configuration.getInstance().getClassProperty(this.getClass(), "LastImage", ""));
+        getContentPane().add(selectFile, cc.xy(2, row));
+        getContentPane().add(tfFile, cc.xyw(4, row, 3));
         
+        row += 2;
         
         getContentPane().add(ok, cc.xy(6, row));
         ok.addActionListener(this);        
@@ -89,12 +97,48 @@ public class ImageExportDialog extends JDialog implements ActionListener {
 	}
 
 	public void actionPerformed(ActionEvent e) {
-		if (e.getSource()==ok) {			
+		if (e.getSource()==ok) {	
+			File f = new File(tfFile.getText());
+			if (f.exists()) {
+				int answer = JOptionPane.showConfirmDialog(this, "File exists. Overwrite file?", "File exists", JOptionPane.YES_NO_OPTION, JOptionPane.WARNING_MESSAGE);
+				if (answer==JOptionPane.NO_OPTION) return;
+			}
+			if (f.isDirectory()) {
+				JOptionPane.showMessageDialog(this, "You only specified a directory.\nPlease enter also a file name for saving the image.", "Can not save file", JOptionPane.ERROR_MESSAGE);
+				return;
+			}
+			if (f.getParentFile()==null || !f.getParentFile().exists()) {
+				JOptionPane.showMessageDialog(this, "You either did not specify a file or the specified parent directory does not exist.\nPlease choose another file for saving the image.", "Can not save file", JOptionPane.ERROR_MESSAGE);
+				return;
+			}
+            control.saveGraphImage(f);
+            parent.getMBar().showFile(f);
 			dispose();
 		} else if (e.getSource()==cbColored) {
 			Configuration.getInstance().getGeneralConfig().setColoredImages(cbColored.isSelected());
 		} else if (e.getSource()==cbTransparent) {
 			Configuration.getInstance().getGeneralConfig().setExportTransparent(cbTransparent.isSelected());
+		} else if (e.getSource()==selectFile) {
+			JFileChooser fc = new JFileChooser(Configuration.getInstance().getClassProperty(this.getClass(), "ImageDirectory"));		
+	        fc.setFileSelectionMode(JFileChooser.FILES_ONLY);
+	        fc.setDialogType(JFileChooser.SAVE_DIALOG);
+	        fc.setFileFilter(new FileFilter() {
+				public boolean accept(File f) {
+					if (f.isDirectory()) return true;
+					return f.getName().toLowerCase().endsWith(".png");
+				}
+				public String getDescription () { return "PNG image files"; }  
+			});
+	        int returnVal = fc.showOpenDialog(this);
+	        if (returnVal == JFileChooser.APPROVE_OPTION) {
+	            File f = fc.getSelectedFile();
+	            Configuration.getInstance().setClassProperty(this.getClass(), "ImageDirectory", f.getParent());
+	            if (!f.getName().toLowerCase().endsWith(".png")) {
+	            	f = new File(f.getAbsolutePath()+".png");
+	            }
+	            tfFile.setText(f.getAbsolutePath());
+	            Configuration.getInstance().setClassProperty(this.getClass(), "LastImage", f.getAbsolutePath());
+	        }		
 		}
 		ip.setImage(getImage());
 		repaint();
@@ -107,30 +151,8 @@ public class ImageExportDialog extends JDialog implements ActionListener {
 	
 	public void save() {
 		
-		if (control.getNL().getNodes().size()==0) {
-    		JOptionPane.showMessageDialog(control.getMainFrame(), "Will not save empty graph.", "Empty graph", JOptionPane.ERROR_MESSAGE);
-    		return;
-    	}
-		JFileChooser fc = new JFileChooser(Configuration.getInstance().getClassProperty(this.getClass(), "ImageDirectory"));		
-        fc.setFileSelectionMode(JFileChooser.FILES_ONLY);
-        fc.setDialogType(JFileChooser.SAVE_DIALOG);
-        fc.setFileFilter(new FileFilter() {
-			public boolean accept(File f) {
-				if (f.isDirectory()) return true;
-				return f.getName().toLowerCase().endsWith(".png");
-			}
-			public String getDescription () { return "PNG image files"; }  
-		});
-        int returnVal = fc.showOpenDialog(this);
-        if (returnVal == JFileChooser.APPROVE_OPTION) {
-            File f = fc.getSelectedFile();
-            Configuration.getInstance().setClassProperty(this.getClass(), "ImageDirectory", f.getParent());
-            if (!f.getName().toLowerCase().endsWith(".png")) {
-            	f = new File(f.getAbsolutePath()+".png");
-            }
-            control.saveGraphImage(f);
-            parent.getMBar().showFile(f);
-        }		
+
+		
 	}
 
 }
