@@ -17,6 +17,8 @@ Changes in version 0.8-9 (??-??-2015)
 
 - Save p-values / correlations
 
+- Dialog for PNG save options
+
 
 Changes in version 0.8-8 (03-10-2014)
 =====================================
